kubernetes/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dex-mi-staging-metabase-deployment
  namespace: dex-mi-staging
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: dex-mi-staging-metabase-webapp
  template:
    metadata:
      labels:
        app: dex-mi-staging-metabase-webapp
        tier: frontend
    spec:
      containers:
        - name: webapp
          image: metabase/metabase:${METABASE_VERSION}
          imagePullPolicy: IfNotPresent
          # Set this if an upgrade ever fails and you need to downgrade
          # args: ["migrate down"]
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 120
            timeoutSeconds: 5
            failureThreshold: 6
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            timeoutSeconds: 3
            periodSeconds: 5
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
